# python-pytest-testing-project-79

./: Makefile  README.md  demo.cast  pyproject.toml
hexlet_code/: __init__.py
hexlet_code/scripts/: page_loader.py
page_loader/: __init__.py  download.py  page-loader.py  page_loader.py
page_loader/scripts/: main.py
tests/: test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses-etalon.html  test_assets_href_change.yaml
tests/fixtures/test_all_assets_exist/: ru-hexlet-io-courses.html
tests/fixtures/test_assets_href_change/: assets_tags.yaml
tests/fixtures/test_check_asset_content/: ru-hexlet-io-courses-etalon.html
