[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "page_loader"
version = "0.1.5"

[tool.hatch.build.targets.wheel]
packages = ["hexlet-code"]

[project.scripts]
page-loader = "page_loader.scripts.main:main"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
]
