[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.5"

[tool.hatch.build.targets.wheel]
packages = ["hexlet-code"]

[project.scripts]
page-loader = "hexlet_code.scripts.page_loader:main"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
]
